Fne 615 mahendra sprint8 (#257)
* FNE 615 changes

FNE 615 changes

* FNE 615 changes

FNE 615 changes

* FNE615 sign in screen change

FNE615 sign in screen change

* FNE615 sign in screen change

FNE615 sign in screen change

* FNE 599 related changes

FNE 599 related changes

* FNE 599 related changes

FNE 599 related changes

--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -106,78 +106,149 @@
            </div>
            <hr />
            <div class="grid-row">
+             <div class="grid-row__col grid-row__col--6">
+               <div class="grid-col">
+                <h4>Email(s) on file</h4>
+                {{ committee_details?.email_on_file }}
+                <br />
+                {{ committee_details?.email_on_file_1 }}
+              </div>
+            </div>
+            <div class="grid-col">
              <div class="grid-row__col grid-row__col--12">
-               <h4>Email(s) on file</h4>
-               {{ committee_details?.email_on_file }}
-               <br />
-               {{ committee_details?.email_on_file_1 }}
-             </div>
-           </div>
-           <div class="grid-row">
-           <br />
-           <br />
-             <div class="grid-row__col grid-row__col--12">
-               <br />
-               <h4>Additional email(s) for your confirmation receipt</h4>
+               <h4>Additional Email(s) For Your Confirmation Receipt</h4>
                <div class="additional-email__field">
                 <div class="grid-row">
-                <div class="grid-col">
-                 <input
-                   type="email"
-                   name="additional_email_1"
-                   value=""
-                   (change)="changeAdditionalEmail($event)"
-                   (blur)="updateAdditionalEmail($event)"
-                   formControlName="additional_email_1"
-                 >
-                </div>
-                 <div class="grid-col">
-                 <!--<button class="btn btn-primary" type="button" id="button-addon2" (click)="add_additional_email_2()"> -->
-                 <button class="btn btn-primary" type="button" id="button-addon2" (click)="add_additional_email_2()">
-                       <i class="fa fa-plus-circle"></i>
-                 </button>
-                </div>
-                </div>
-                 <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
-                   <div class="text-error" *ngIf="frmSignee.controls.additional_email_1.errors?.email">
-                     Additional email must be valid email address.
-                   </div>
+                  <div class="grid-col">
+                    <label for="additional_email_1"> Additional Email 01 </label>  
+                    <input
+                      type="email"
+                      name="additional_email_1"
+                      value=""
+                      (change)="changeAdditionalEmail($event)"
+                      (blur)="updateAdditionalEmail($event)"
+                      formControlName="additional_email_1"
+                    >
+                    <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
+                        <div class="text-error" *ngIf="frmSignee.controls.additional_email_1.errors?.email">
+                          Additional email 1 must be valid email address.
+                        </div>
+                    </div>
+                  </div>
+
+
+                  <div class="grid-col">
+                      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+                       </div>
+                  <div class="grid-col">
+                      <label for="additional_email_2"> Additional Email 02 </label>  
+                      <input
+                        type="email"
+                        name="additional_email_2"
+                        value=""
+                        (change)="changeAdditionalEmail($event)"
+                        (blur)="updateAdditionalEmail($event)"
+                        formControlName="additional_email_2"
+                      >
+
+                      <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
+                          <div class="text-error" *ngIf="frmSignee.controls.additional_email_2.errors?.email">
+                            Additional email 2 must be valid email address.
+                          </div>
+                      </div>
                  </div>
+                </div>
                </div>
-               <div class="additional-email__field"   *ngIf="needAdditionalEmail_2">
-                <div class="grid-row">
+             </div>
+            </div>
+          </div>
+
+          <div class="grid-row">
+              <div class="grid-row__col grid-row__col--6">
                 <div class="grid-col">
-                 <input
-                   type="email"
-                   name="additional_email_2"
-                   value=""
-                   (change)="changeAdditionalEmail($event)"
-                   (blur)="updateAdditionalEmail($event)"
-                   formControlName="additional_email_2"
-                 >
-                 </div>
-                 <div class="grid-col">
-                 <!--<button class="btn btn-danger" class="btn btn-link" type="button" id="button-addon2" (click)="remove_additional_email_2()>-->
-                    <button class="btn btn-danger" type="button" id="button-addon2" (click)="remove_additional_email_2()">
-                          <i class="fa fa-minus-circle"></i>
-                    </button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+               </div>
+             </div>
+             <div class="grid-col">
+              <div class="grid-row__col grid-row__col--12">
+                <div class="additional-email__field">
+                 <div class="grid-row">
+                
+                  <div class="grid-col">
+                  <br />
+                  
+                    <label for="confirm_email_1"> Confirm Email 01 </label>  
+                    <input
+                      type="email"
+                      name="confirm_email_1"
+                      value=""
+                      (change)="changeAdditionalEmail($event)"
+                      (blur)="updateAdditionalEmail($event)"
+                      formControlName="confirm_email_1"
+                    >
+                    <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
+                        <div class="text-error" *ngIf="frmSignee.controls.confirm_email_1.errors?.email">
+                          Confirm email 1 must be valid email address.
+                        </div>
+                    </div>
+                    <div>
+                      <br />
+    
+                      <div class="text-error" *ngIf="additionalEmail1Invalid && showAdditionalEmail1Warn">
+                          Additional email 1 is invalid.
+                      </div>
+                      <div class="text-success" *ngIf="!additionalEmail1Invalid && showAdditionalEmail1Warn">
+                          {{this.confirm_email_1}} <br /> has been successfully added.
+                      </div>
+                      <div class="text-error" *ngIf="additionalEmail2Invalid && showAdditionalEmail2Warn">
+                          Additional email 2 is invalid.
+                      </div>
+                      <div class="text-success" *ngIf="!additionalEmail2Invalid && showAdditionalEmail2Warn">
+                          {{this.confirm_email_2}}<br /> has been successfully added.
+                      </div>
+                    </div>
+                  </div>
+  
+                   <div class="grid-col">
+                      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+                    
+                   </div>
+                   <div class="grid-col">
+                      <br />
+                     
+                     <label for="confirm_email_2"> Confirm Email  02 </label>  
+                     <input
+                       type="email"
+                       name="confirm_email_2"
+                       value=""
+                       (change)="changeAdditionalEmail($event)"
+                       (blur)="updateAdditionalEmail($event)"
+                       formControlName="confirm_email_2"
+                     >
+                     <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
+                        <div class="text-error" *ngIf="frmSignee.controlsconfirm_email_2.errors?.email">
+                            Confirm email 2 must be valid email address.
+                        </div>
+                     </div>
+                     <br />
+                     <br />
+                 
+                   </div>
+
                   </div>
                  </div>
-                 <div *ngIf="(frmSignee.invalid && (frmSignee.dirty || frmSignee.touched))">
-                   <div class="text-error" *ngIf="frmSignee.controls.additional_email_2.errors?.email">
-                     Additional email must be valid email address.
-                   </div>
-                 </div>
-               </div>
-               <hr />
+              </div>
              </div>
-           </div>
+           </div>  
+         
          </form>
        </div> <!-- ./content -->
      </section>
      <footer>
        <div class="grid-row">
          <div class="grid-row__col grid-row__col--12">
+            <br />
+            <br />
            <button
              type="button"
              class="btn btn-secondary btn-right"
