--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -138,7 +138,7 @@
 
 
                   <div class="grid-col">
-                      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+                      &nbsp;&nbsp;&nbsp;&nbsp; 
                        </div>
                   <div class="grid-col">
                       <label for="additional_email_2"> Additional Email 02 </label>  
@@ -210,8 +210,8 @@
                   </div>
   
                    <div class="grid-col">
-                      &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
-                    
+                      &nbsp;&nbsp;&nbsp;&nbsp; 
+                      
                    </div>
                    <div class="grid-col">
                       <br />
