--- a/front-end/src/app/shared/scss/_custom-colors.scss
+++ b/front-end/src/app/shared/scss/_custom-colors.scss
@@ -7,6 +7,7 @@ $shuttleGray: #5B616B; //really dark gray
 $mercury: #E6E6E6; // really light gray
 $seaShell: #F1F1F1; // really light gray, almost like white
 
+$pictonBlue: #39B9F7; // really light blue for links
 $blueZodiac: #112E51; // primary blue
 $horizon: #5F82A4; // secondary blue
 $pelorous: #35BDBB; // light green
