--- a/front-end/src/app/app-layout/app-layout.component.scss
+++ b/front-end/src/app/app-layout/app-layout.component.scss
@@ -38,10 +38,10 @@
           padding-left: 100px;
         }
         @include media(mediumDesktop) {
-          padding-left: 130px;
+          padding-left: 80px;
         }
         @include media(largeDesktop) {
-          padding-left: 130px;
+          padding-left: 80px;
         }
       }
     }
@@ -68,10 +68,10 @@
           padding-left: 100px;
         }
         @include media(mediumDesktop) {
-          padding-left: 130px;
+          padding-left: 60px;
         }
         @include media(largeDesktop) {
-          padding-left: 130px;
+          padding-left: 60px;
         }
       }
     }
@@ -232,28 +232,38 @@
   .app__footer {
     background-color: $mercury;
     color: $black;
+    height: 80px;
     margin-top: 5px;
     padding-left: 80px;
     @include media(tablet) {
       padding-left: 100px;
     }
     @include media(mediumDesktop) {
-      padding-left: 130px;
+      padding-left: 50;
     }
     @include media(largeDesktop) {
-      padding-left: 130px;
+      padding-left: 50px;
     }
     .row {
       margin-left: 0;
       margin-right: 0;
-      div[class^="col-sm"] {
-        a {
-          color: $dodgerBlue;
-          &:hover,
-          &:active,
-          &:visited {
-            color: $dodgerBlue;
-          }
+      .footer-col {
+        display: inline-block;
+      }
+      .btn-link,
+      a {
+        color: $pictonBlue;
+        &:hover,
+        &:active,
+        &:visited {
+          color: $pictonBlue;
+        }
+      }
+      a {
+        text-decoration: none;
+        &:hover,
+        &:active {
+          text-decoration: underline;
         }
       }
     }
